# caja

./: .build.yml  .gitmodules  .travis.yml  AUTHORS  CNAME  COPYING  COPYING.EXTENSIONS  ChangeLog  HACKING  Makefile.am  NEWS  README  README.commits  THANKS  TODO  aclocal.m4  autogen.sh  caja.pot  config.h.in  configure.ac  configure.in  gla11y.mk  index.html  makepot  meson.build  update-authors.pl
data/: Makefile.am  a11y-caja-desktop-base.css  browser.xml  browser.xml.in  caja-autorun-software.desktop.in  caja-autorun-software.desktop.in.in  caja-autostart.desktop.in  caja-bookmarks-window.ui  caja-browser.desktop.in  caja-browser.desktop.in.in  caja-computer.desktop.in  caja-computer.desktop.in.in  caja-desktop-3.14.css  caja-desktop-ContrastHigh.css  caja-desktop.css  caja-extras.placeholder  caja-file-management-properties.desktop.in  caja-file-management-properties.desktop.in.in  caja-file-management-properties.ui  caja-folder-handler.desktop.in  caja-folder-handler.desktop.in.in  caja-home.desktop.in  caja-home.desktop.in.in  caja-resources.gresource.xml  caja-suggested.placeholder  caja.appdata.xml  caja.appdata.xml.in  caja.appdata.xml.in.in  caja.css  caja.desktop.in  caja.desktop.in.in  caja.xml.in  freedesktop-dbus-interfaces.xml  mate-network-scheme.desktop.in.in  org.mate.freedesktop.FileManager1.service.in
data/icons/: Makefile.am
data/patterns/: Makefile.am
docs/: Makefile.am  architecture.txt  caja-autorun-software.1  caja-connect-server.1  caja-file-management-properties.1  caja-internals.sxw  caja-io.txt  caja.1  caja.faq  dnd.txt  key_mouse_navigation.txt  recommended-books.html  smoketests.html  state-machines.txt  style-guide.html
docs/reference/: Makefile.am  Makefile.in
docs/reference/libcaja-extension/: Makefile.am  Makefile.in  libcaja-extension-docs.xml  libcaja-extension-sections.txt  libcaja-extension.types  version.xml.in
docs/reference/libcaja-extension/html/: ch01.html  index.html  index.sgml  ix01.html  libcaja-extension-caja-column-provider.html  libcaja-extension-caja-column.html  libcaja-extension-caja-extension-types.html  libcaja-extension-caja-file-info.html  libcaja-extension-caja-info-provider.html  libcaja-extension-caja-location-widget-provider.html  libcaja-extension-caja-menu-provider.html  libcaja-extension-caja-menu.html  pt01.html  (+4 more)
libcaja-extension/: Makefile.am  caja-column-provider.c  caja-column-provider.h  caja-column.c  caja-column.h  caja-configurable.c  caja-configurable.h  caja-extension-i18n.h  caja-extension-private.h  caja-extension-types.c  caja-extension-types.h  caja-file-info.c  caja-file-info.h  caja-info-provider.c  caja-info-provider.h  caja-location-widget-provider.c  caja-location-widget-provider.h  caja-menu-item.c  caja-menu-item.h  caja-menu-provider.c  caja-menu-provider.h  caja-menu.c  caja-menu.h  caja-property-page-provider.c  caja-property-page-provider.h  caja-property-page.c  caja-property-page.h  caja-widget-view-provider.c  caja-widget-view-provider.h  libcaja-extension-uninstalled.pc.in  libcaja-extension.pc.in
libcaja-private/: Makefile.am  README  apps_caja_preferences.schemas.in  caja-autorun.c  caja-autorun.h  caja-bookmark.c  caja-bookmark.h  caja-cell-renderer-pixbuf-emblem.c  caja-cell-renderer-pixbuf-emblem.h  caja-cell-renderer-text-ellipsized.c  caja-cell-renderer-text-ellipsized.h  caja-clipboard-monitor.c  caja-clipboard-monitor.h  caja-clipboard.c  caja-clipboard.h  caja-column-chooser.c  caja-column-chooser.h  caja-column-utilities.c  caja-column-utilities.h  caja-customization-data.c  caja-customization-data.h  caja-dbus-manager.c  caja-dbus-manager.h  caja-debug-log.c  caja-debug-log.h  caja-default-file-icon.c  caja-default-file-icon.h  caja-desktop-directory-file.c  caja-desktop-directory-file.h  caja-desktop-directory.c  caja-desktop-directory.h  caja-desktop-icon-file.c  caja-desktop-icon-file.h  caja-desktop-link-monitor.c  caja-desktop-link-monitor.h  caja-desktop-link.c  caja-desktop-link.h  caja-desktop-metadata.c  caja-desktop-metadata.h  caja-dialog-notebook.c  (+136 more)
src/: Makefile.am  caja-actions.h  caja-application-smclient.c  caja-application-smclient.h  caja-application.c  caja-application.h  caja-autorun-software.c  caja-bookmark-list.c  caja-bookmark-list.h  caja-bookmarks-sidebar.c  caja-bookmarks-sidebar.h  caja-bookmarks-window.c  caja-bookmarks-window.h  caja-bookmarks-window.ui  caja-connect-server-dialog-main.c  caja-connect-server-dialog-nonmain.c  caja-connect-server-dialog.c  caja-connect-server-dialog.h  caja-connect-server-operation.c  caja-connect-server-operation.h  caja-convert-metadata.c  caja-desktop-window.c  caja-desktop-window.h  caja-emblem-sidebar.c  caja-emblem-sidebar.h  caja-file-management-properties-main.c  caja-file-management-properties.c  caja-file-management-properties.h  caja-file-management-properties.ui  caja-freedesktop-dbus.c  caja-freedesktop-dbus.h  caja-history-sidebar.c  caja-history-sidebar.h  caja-image-properties-page.c  caja-image-properties-page.h  caja-information-panel.c  caja-information-panel.h  caja-location-bar.c  caja-location-bar.h  caja-location-dialog.c  (+68 more)
src/file-manager/: Makefile.am  caja-audio-mime-types.h  caja-directory-view-ui.xml  caja-icon-view-ui.xml  fm-actions.h  fm-desktop-icon-view.c  fm-desktop-icon-view.h  fm-desktop-wayland-bg-dialog.c  fm-desktop-wayland-bg-dialog.h  fm-directory-view.c  fm-directory-view.h  fm-ditem-page.c  fm-ditem-page.h  fm-empty-view.c  fm-empty-view.h  fm-error-reporting.c  fm-error-reporting.h  fm-icon-container.c  fm-icon-container.h  fm-icon-view.c  fm-icon-view.h  fm-list-model.c  fm-list-model.h  fm-list-view-private.h  fm-list-view.c  fm-list-view.h  fm-properties-window.c  fm-properties-window.h  fm-tree-model.c  fm-tree-model.h  fm-tree-view.c  fm-tree-view.h  fm-widget-view.c  fm-widget-view.h
test/: Makefile.am  test-caja-directory-async.c  test-caja-search-engine.c  test-caja-wrap-table.c  test-copy.c  test-eel-background.c  test-eel-editable-label.c  test-eel-image-table.c  test-eel-labeled-image.c  test-eel-pixbuf-scale.c  test.c  test.h
(+2562 files in other folders)
